# idearank

./: .gitignore  ARCHITECTURE.md  CHROMA_SETUP.md  COMPETITION_README.md  IMPLEMENTATION_SUMMARY.md  PIPELINE_SUMMARY.md  QUICKSTART.md  README.md  RUN_ME_FIRST.md  SUMMARY.md  YOUTUBE_PIPELINE.md  cleanup_sources.py  hello.py  pyproject.toml  streamlit_app.py  transcribe_audio.py  youtube_test.db
examples/: __init__.py  basic_usage.py  chroma_usage.py  citation_parser_demo.py  cli_workflow_example.sh  competition_demo.py  custom_weights.py  dual_chroma_batch_processing.py  dual_chroma_comparison.py  ghost_export_example.py  medium_demo.py  twitter_demo.py  youtube_pipeline_demo.py  youtube_pipeline_simple_test.py
idearank/: __init__.py  citation_parser.py  cli.py  cli_config.py  competition_models.py  competition_pipeline.py  competition_scorer.py  competition_visualizer.py  config.py  content_sources.py  diagnostics.py  interactive_game.py  models.py  network.py  pipeline.py  scorer.py  semantic_extractor.py  visualizations.py
idearank/factors/: __init__.py  base.py  cohesion.py  density.py  learning.py  quality.py  trust.py  uniqueness.py
idearank/integrations/: __init__.py  ghost.py  ghost_export.py  medium.py  storage.py  transcription.py  twitter.py  youtube.py
idearank/pipelines/: __init__.py  ghost_pipeline.py  medium_pipeline.py  twitter_pipeline.py  youtube_pipeline.py
idearank/providers/: __init__.py  chroma.py  dual_chroma.py  embeddings.py  neighborhoods.py  topics.py
idearank/utils/: __init__.py  chunking.py
tests/: __init__.py  test_chroma_provider.py  test_config.py  test_models.py
