[project]
name = "idearank"
version = "0.1.0"
description = "A PageRank replacement for ideas: multi-factor ranking algorithm for video content"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
openai = [
    "openai>=1.0.0",
]
faiss = [
    "faiss-cpu>=1.7.0",
]
ml = [
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
]
all = [
    "idearank[dev,openai,faiss,ml]",
]
