[project]
name = "idearank"
version = "0.1.0"
description = "A PageRank replacement for ideas: multi-factor ranking algorithm for video content"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24.0,<2.0.0",  # ChromaDB not yet compatible with NumPy 2.0
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
openai = [
    "openai>=1.0.0",
]
faiss = [
    "faiss-cpu>=1.7.0",
]
ml = [
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
]
nlp = [
    "spacy>=3.0.0",
]
chroma = [
    "chromadb>=1.1.1",
]
youtube = [
    "google-api-python-client>=2.0.0",
    "youtube-transcript-api>=0.6.0",
    "yt-dlp>=2023.0.0",  # For downloading audio and extracting subtitles
    "faster-whisper>=0.9.0",  # Local Whisper transcription (GPU-accelerated)
]
embeddings = [
    "sentence-transformers>=2.0.0",  # Local embeddings, no API key needed
]
viz = [
    "matplotlib>=3.5.0",
    "pandas>=1.5.0",
]
streamlit = [
    "streamlit>=1.28.0",
    "plotly>=5.14.0",
]
cli = [
    "click>=8.0.0",
    "rich>=13.0.0",  # For beautiful terminal output
]
pipeline = [
    "idearank[chroma,youtube,cli,embeddings,viz]",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
]
all = [
    "idearank[dev,openai,faiss,ml,nlp,chroma,youtube,cli,embeddings,viz,streamlit,pipeline]",
]

[project.scripts]
idearank = "idearank.cli:main"
